<resources>
    <string name="app_name">Skull Scoring</string>
    <string name="title_activity_sksplash">SKSplashActivity</string>
    <string name="app_version_label" translatable="false">v%1$s (build %2$d)</string>
    <string name="first_game">Première partie</string>
    <string name="add">Ajouter</string>
    <string name="validate">Valider</string>
    <string name="play">Jouer</string>
    <string name="init">Configuration</string>
    <string name="settings">Réglages</string>
    <string name="about">À propos</string>
    <string name="validate_choices">Valider mes choix</string>
    <string name="onboarding_start">On se la fait cette première partie ?</string>
    <string name="onboarding_new_player">Comment s\'appelle le joueur ?</string>
    <string name="onboarding_player_list">Qui joue ?</string>
    <string name="resume">Continuer</string>

    <!-- data permission screen -->
    <string name="data_permission_title">Traitement de vos données</string>
    <string name="data_permission_processing">Skull Scoring ne collecte aucune de vos données personnelles (nom, email, âge, position, …)</string>
    <string name="data_permission_warning">Vous pourrez, à tout moment, modifier vos choix ci-dessus dans l\'écran de réglages de l\'application.</string>
    <string name="data_permission_crash_description">Il se peut, en de rares occasions, que l\'application s\'arrête pour une raison inexpliquée. %1$s peut alors envoyer des données sur son état au développeur qui l\'aideront à comprendre cette raison et à corriger le problème.</string>
    <string name="data_permission_crash_label">Autoriser l\'envoi de données sur l\'état de l\'application en cas de problème</string>
    <string name="data_permission_use_description">Pour permettre au développeur d\'améliorer l\'application, %1$s peut envoyer des données anonymisées sur la façon dont vous l\'utilisez.</string>
    <string name="data_permission_use_label">Autoriser l\'envoi de données d\'utilisation anonymisées à des fins statistiques</string>

    <string name="error_players_not_enough_selected">Sélectionne au moins 2 joueurs</string>
    <string name="error_players_too_many_selected">On ne peut pas jouer à plus de 6 joueurs</string>
    <string name="error_player_already_exists">Le joueur %1$s existe déjà</string>
    <string name="error_player_empty_name">Saisis un nom</string>
    <string name="error_turn_declarations_not_updated">%1$s annonces n\'ont pas été mises à jour</string>
    <string name="error_turn_results_not_updated">%1$s resultats n\'ont pas été mis à jour</string>
    <string name="error_turn_results_sum_is_invalid">La somme des résultats doit être égale à %1$s</string>
    <string name="error_game_not_deleted">%1$s parties n\'ont pas été supprimées</string>
    <string name="warning_not_implemented">Bientôt disponible</string>
    <string name="warning_player_not_deletable">Ce joueur participe à au moins une partie. Il n\'est donc pas supprimable !</string>
    <string name="cancel">Annuler</string>
    <string name="alert_message_duplicate_game">Souhaitez-vous créer une nouvelle partie avec les mêmes joueurs que celle sélectionnée ?</string>
    <string name="alert_warning">Alerte</string>
    <string name="game_ended">Terminé</string>
    <string name="turn">Tour %1$d</string>
    <string name="turn_history">Historique des tours</string>
    <string name="game">Partie du %1$s</string>
    <string name="declaration_value">Annonce : %1$d</string>
    <string name="result_value">Résultat : %1$d</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="select_players">Sélectionner les joueurs</string>
    <string name="add_player">Ajouter un joueur</string>
    <string name="sort_players">Ordonner les joueurs</string>
    <string name="declarations">Annonces</string>
    <string name="results">Résultats</string>
    <string name="item_turn_result">%1$s (annonce : %2$d)</string>
    <string name="configuration">Configuration</string>
    <string name="new_group">Nouveau groupe</string>
    <string name="create">Créer</string>
    <string name="search_for_group">Chercher un groupe</string>
    <string name="new_player">Nouveau joueur</string>
    <string name="activity_player_sorting_label">Est-ce que les joueurs sont bien dans l\'ordre de distribution des cartes, le premier joueur étant bien le premier à distribuer les cartes ?</string>
    <string name="item_turn_result_skull_king">Le Skull King prend des pirates</string>
    <string name="item_turn_result_mermaid">La Mermaid prend le Skull King</string>
    <string name="lets_go">C\'est parti</string>
    <string name="bottomsheet_create_group_label">Quel est le nom du groupe ?</string>
    <string name="games">Parties</string>
    <string name="players">Joueurs</string>
    <string name="copy">Copier</string>
    <string name="remove">Supprimer</string>
</resources>