<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/data_permission_title">
        <Preference android:enabled="false"
            android:selectable="false"
            app:singleLineTitle="false"
            android:title="@string/data_permission_processing"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:singleLineTitle="false"
            android:key="PREFERENCE_CRASH_DATA_SENDING_PERMISSION"
            android:title="@string/data_permission_crash_label"/>
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:singleLineTitle="false"
            android:key="PREFERENCE_USE_DATA_SENDING_PERMISSION"
            android:title="@string/data_permission_use_label"/>
    </PreferenceCategory>
</PreferenceScreen>