<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/widget_appbar_gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/marginM">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                android:layout_marginBottom="@dimen/marginM"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/data_permission_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeHeadline" />

            <TextView
                android:id="@+id/textViewDataSendingProcessing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                android:fontFamily="sans-serif-black"
                android:text="@string/data_permission_processing"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeSubhead" />

            <TextView
                android:id="@+id/textViewDataSendingCrashDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                android:text="@string/data_permission_crash_description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeBody" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAllowCrashDataSending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginS"
                android:checked="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/data_permission_crash_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeSubhead" />

            <TextView
                android:id="@+id/textViewDataSendingUseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                android:text="@string/data_permission_use_description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeBody" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAllowUseDataSending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginS"
                android:checked="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/data_permission_use_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeSubhead" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                android:layout_marginBottom="@dimen/marginM"
                android:fontFamily="sans-serif-black"
                android:text="@string/data_permission_warning"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeSubhead" />

            <Button
                android:id="@+id/buttonValidateDataPermissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginM"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/validate_choices"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>